uuid generator ve setusername eklendi
Uuid generator eklendi
Setusername ile kullanıcıdan input alınıyor ve başlatma argümanında isim yerine input geçiyor